# serving

./: .bazeliskrc  .bazelrc  .clang-format  .gitignore  .licenserc.yaml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  build_package_entrypoint.sh  build_wheel_entrypoint.sh  gen_py_protos.py  logging.config  pyproject.toml  renovate.json  requirements.txt  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_9.txt  setup.py  update_version.py  update_version.sh  version.bzl  version.txt
secretflow_serving/apis/: BUILD.bazel  common.proto  error_code.proto  execution_service.proto  metrics.proto  model_service.proto  prediction_service.proto  status.proto
secretflow_serving/config/: BUILD.bazel  cluster_config.proto  feature_config.proto  logging_config.proto  model_config.proto  retry_policy_config.proto  server_config.proto  tls_config.proto  trace_config.proto
secretflow_serving/core/: BUILD.bazel  exception.h  link_func.cc  link_func.h  logging.cc  logging.h  singleton.h  types.h
secretflow_serving/feature_adapter/: BUILD.bazel  feature_adapter.cc  feature_adapter.h  feature_adapter_factory.h  file_adapter.cc  file_adapter.h  file_adapter_test.cc  http_adapter.cc  http_adapter.h  http_adapter_test.cc  mock_adapter.cc  mock_adapter.h  mock_adapter_test.cc  streaming_adapter.cc  streaming_adapter.h  streaming_adapter_test.cc
secretflow_serving/framework/: BUILD.bazel  executable.cc  executable.h  executable_impl.cc  executable_impl.h  execute_context.cc  execute_context.h  execute_context_test.cc  executor.cc  executor.h  executor_test.cc  loader.h  model_info_collector.cc  model_info_collector.h  model_info_processor.cc  model_info_processor.h  model_loader.cc  model_loader.h  predictor.cc  predictor.h  predictor_impl.cc  predictor_impl.h  predictor_impl_test.cc  predictor_test.cc  propagator.cc  propagator.h
secretflow_serving/ops/: BUILD.bazel  arrow_processing.cc  arrow_processing.h  arrow_processing_test.cc  dot_product.cc  dot_product.h  dot_product_benchmark.cc  dot_product_test.cc  graph.cc  graph.h  graph_test.cc  graph_version.h  merge_y.cc  merge_y.h  merge_y_benchmark.cc  merge_y_test.cc  node.cc  node.h  node_def_util.cc  node_def_util.h  node_def_util_test.cc  onehot_operator.cc  onehot_operator.h  onehot_operator_test.cc  op_def_builder.cc  op_def_builder.h  op_factory.h  op_factory_test.cc  op_kernel.h  op_kernel_factory.h  sql_operator.cc  sql_operator.h  sql_operator_test.cc  tree_ensemble_predict.cc  tree_ensemble_predict.h  tree_ensemble_predict_test.cc  tree_merge.cc  tree_merge.h  tree_merge_test.cc  tree_select.cc  (+4 more)
secretflow_serving/ops/he/: BUILD.bazel  test_utils.cc  test_utils.h
secretflow_serving/ops/onehot/: BUILD.bazel  onehot_substitution.cc  onehot_substitution.h
secretflow_serving/ops/phe_linear/: BUILD.bazel  phe_2p_decrypt_peer_y.cc  phe_2p_decrypt_peer_y.h  phe_2p_decrypt_peer_y_test.cc  phe_2p_dot_product.cc  phe_2p_dot_product.h  phe_2p_dot_product_test.cc  phe_2p_merge_y.cc  phe_2p_merge_y.h  phe_2p_merge_y_test.cc  phe_2p_reduce.cc  phe_2p_reduce.h  phe_2p_reduce_test.cc  test_utils.cc
secretflow_serving/ops/sql/: BUILD.bazel  sql_processor.cc  sql_processor.h
secretflow_serving/protos/: BUILD.bazel  attr.proto  bundle.proto  compute_trace.proto  data_type.proto  feature.proto  field.proto  graph.proto  link_function.proto  onehot_substitution_spec.proto  op.proto
secretflow_serving/server/: BUILD.bazel  execution_core.cc  execution_core.h  execution_service_impl.cc  execution_service_impl.h  health.cc  health.h  main.cc  model_service_impl.cc  model_service_impl.h  prediction_core.cc  prediction_core.h  prediction_service_impl.cc  prediction_service_impl.h  server.cc  server.h  version.h
secretflow_serving/server/conf/: gflags.conf
secretflow_serving/server/kuscia/: BUILD.bazel  config_parser.cc  config_parser.h  config_parser_test.cc  serving_config.proto
secretflow_serving/server/metrics/: BUILD.bazel  default_metrics_registry.cc  default_metrics_registry.h  metrics_service.cc  metrics_service.h  metrics_service_test.cc
secretflow_serving/server/trace/: BUILD.bazel  brpc_http_carrier.h  bthreadlocal_context_storage.cc  bthreadlocal_context_storage.h  noop.h  span_info.proto  spdlog_span_exporter.cc  spdlog_span_exporter.h  trace.cc  trace.h
secretflow_serving/source/: BUILD.bazel  dataproxy_source.cc  dataproxy_source.h  factory.h  filesystem_source.cc  filesystem_source.h  http_service.proto  http_source.cc  http_source.h  http_source_test.cc  oss_source.cc  oss_source.h  source.cc  source.h  source_test.cc
secretflow_serving/spis/: BUILD.bazel  batch_feature_service.proto  common.proto  error_code.proto
secretflow_serving/tools/inferencer/: BUILD.bazel  README.md  config.proto  control_service_impl.cc  control_service_impl.h  inference_executor.cc  inference_executor.h  inference_service.proto  main.cc
secretflow_serving/tools/model_view/: BUILD.bazel  main.cc
secretflow_serving/util/: BUILD.bazel  arrow_helper.cc  arrow_helper.h  arrow_helper_test.cc  backoff_policy.h  csv_extractor.cc  csv_extractor.h  csv_extractor_test.cc  csv_util.cc  csv_util.h  he_mgm.cc  he_mgm.h  network.cc  network.h  oss_client.cc  oss_client.h  retry_policy.cc  retry_policy.h  retry_policy_test.cc  sys_util.cc  sys_util.h  test_utils.cc  test_utils.h  thread_pool.h  thread_safe_queue.h  thread_safe_queue_test.cc  utils.cc  utils.h
secretflow_serving_lib/: BUILD.bazel  __init__.py  api.py  api_test.py  attr_pb2.py  bundle_pb2.py  compute_trace_pb2.py  data_type_pb2.py  feature_pb2.py  graph_builder.py  graph_builder_test.py  graph_pb2.py  libserving.cc  link_function_pb2.py  op_pb2.py  trace_config_pb2.py  version.py
secretflow_serving_lib/config/: BUILD.bazel  __init__.py
secretflow_serving_lib/secretflow_serving/config/: BUILD.bazel  cluster_config_pb2.py  feature_config_pb2.py  logging_config_pb2.py  model_config_pb2.py  retry_policy_config_pb2.py  tls_config_pb2.py  (+3 more)
secretflow_serving_lib/tests/: BUILD.bazel  api_test.py  graph_builder_test.py
(+204 files in other folders)
