# Copyright 2022 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "sf_serving",
    srcs = [
        "//examples:data",
        "//secretflow_serving/server:secretflow_serving",
        "//secretflow_serving/server:secretflow_serving_conf",
        "//secretflow_serving/tools/model_view",
        "//secretflow_serving/tools/simple_feature_service",
    ],
    extension = "tar.gz",
    package_dir = "sf_serving",
    remap_paths = {
        "secretflow_serving/server/": "",
        "secretflow_serving/tools/": "tools/",
    },
    strip_prefix = "./",
)
