# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
)

cc_proto_library(
    name = "common_cc_proto",
    deps = [":common_proto"],
)

proto_library(
    name = "status_proto",
    srcs = ["status.proto"],
)

cc_proto_library(
    name = "status_cc_proto",
    deps = [":status_proto"],
)

proto_library(
    name = "error_code_proto",
    srcs = [
        "error_code.proto",
    ],
)

cc_proto_library(
    name = "error_code_cc_proto",
    deps = [":error_code_proto"],
)

proto_library(
    name = "prediction_service_proto",
    srcs = [
        "prediction_service.proto",
    ],
    deps = [
        ":common_proto",
        ":status_proto",
        "//secretflow_serving/protos:feature_proto",
        "//secretflow_serving/protos:graph_proto",
    ],
)

cc_proto_library(
    name = "prediction_service_cc_proto",
    deps = [":prediction_service_proto"],
)

proto_library(
    name = "model_service_proto",
    srcs = [
        "model_service.proto",
    ],
    deps = [
        ":common_proto",
        ":status_proto",
        "//secretflow_serving/protos:bundle_proto",
    ],
)

cc_proto_library(
    name = "model_service_cc_proto",
    deps = [":model_service_proto"],
)

proto_library(
    name = "execution_service_proto",
    srcs = [
        "execution_service.proto",
    ],
    deps = [
        ":common_proto",
        ":status_proto",
        "//secretflow_serving/protos:feature_proto",
    ],
)

cc_proto_library(
    name = "execution_service_cc_proto",
    deps = [":execution_service_proto"],
)

proto_library(
    name = "metrics_proto",
    srcs = [
        "metrics.proto",
    ],
)

cc_proto_library(
    name = "metrics_cc_proto",
    deps = [":metrics_proto"],
)
