# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//python:defs.bzl", "python_proto_compile")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "retry_policy_config_proto",
    srcs = ["retry_policy_config.proto"],
)

cc_proto_library(
    name = "retry_policy_cc_config",
    deps = [":retry_policy_config_proto"],
)

proto_library(
    name = "tls_config_proto",
    srcs = ["tls_config.proto"],
)

cc_proto_library(
    name = "tls_config_cc_proto",
    deps = [":tls_config_proto"],
)

proto_library(
    name = "cluster_config_proto",
    srcs = ["cluster_config.proto"],
    deps = [
        ":retry_policy_config_proto",
        ":tls_config_proto",
    ],
)

cc_proto_library(
    name = "cluster_config_cc_proto",
    deps = [":cluster_config_proto"],
)

proto_library(
    name = "feature_config_proto",
    srcs = ["feature_config.proto"],
    deps = [
        ":retry_policy_config_proto",
        ":tls_config_proto",
    ],
)

cc_proto_library(
    name = "feature_config_cc_proto",
    deps = [
        ":feature_config_proto",
    ],
)

proto_library(
    name = "model_config_proto",
    srcs = ["model_config.proto"],
    deps = [":tls_config_proto"],
)

cc_proto_library(
    name = "model_config_cc_proto",
    deps = [":model_config_proto"],
)

proto_library(
    name = "server_config_proto",
    srcs = ["server_config.proto"],
    deps = [
        "tls_config_proto",
    ],
)

cc_proto_library(
    name = "server_config_cc_proto",
    deps = [":server_config_proto"],
)

proto_library(
    name = "logging_config_proto",
    srcs = ["logging_config.proto"],
)

cc_proto_library(
    name = "logging_config_cc_proto",
    deps = [":logging_config_proto"],
)

proto_library(
    name = "trace_config_proto",
    srcs = ["trace_config.proto"],
)

cc_proto_library(
    name = "trace_config_cc_proto",
    deps = [":trace_config_proto"],
)

proto_library(
    name = "serving_config_proto",
    srcs = ["serving_config.proto"],
    deps = [
        ":cluster_config_proto",
        ":feature_config_proto",
        ":model_config_proto",
        ":server_config_proto",
    ],
)

cc_proto_library(
    name = "serving_config_cc_proto",
    deps = [":serving_config_proto"],
)

python_proto_compile(
    name = "config_py_proto",
    output_mode = "NO_PREFIX",
    prefix_path = "../..",
    protos = [
        ":cluster_config_proto",
        ":feature_config_proto",
        ":logging_config_proto",
        ":model_config_proto",
        ":retry_policy_config_proto",
        ":server_config_proto",
        ":serving_config_proto",
        ":tls_config_proto",
        ":trace_config_proto",
    ],
)
